add styles to home page

--- a/src/Pages/Home/style.scss
+++ b/src/Pages/Home/style.scss
@@ -6,6 +6,23 @@
    
 }
 
+.github {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
+
+    p {
+        line-height: 1px;
+    }
+
+    a {
+        text-decoration: none;
+        color: rgb(51, 4, 94);
+    }
+}
+
 .title {
     h1 {
         font-family: 'Press Start 2P', cursive;
@@ -17,8 +34,22 @@
 .items {
 
     padding: 15px;
+    margin-bottom: 30px;
 
     background-color: #785fb7;
+
+    a {
+        text-decoration: none;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        text-align: justify;
+
+        color: rgb(51, 4, 94);
+    }
 
     div {
         display: flex;
@@ -28,11 +59,10 @@
 
         text-align: justify;
 
-        p {
-            span {
+  
+            h5 {
                 text-align: center;
             }
-        }
        
     }
 
